troubleshooting img height issue displaying on mobile devices but not on devtools mobile view

--- a/src/components/pages/projects/styles.scss
+++ b/src/components/pages/projects/styles.scss
@@ -91,8 +91,8 @@
     margin: auto 50px;
     
     @media (max-width: 1350px) {
-        // height: auto;
         width: 98%;
+        height: 98%;
         margin: 0 auto;
     }
 }
